# FootChaos-Metal

./: .gitignore  CMakeLists.txt  FootChaos  README.md  compile.sh  compiles.sh  run-debug.sh  run.sh
src/: config.hpp  example.cpp  main.cpp  utils.cpp  utils.hpp
src/footchaos/: ball.cpp  car.cpp  footchaos.cpp  footchaos.hpp
src/network/: commandManager.cpp  commandManager.hpp  manager.cpp  manager.hpp  network.cpp  network.hpp  networksCompute.metal  networksManager.cpp  networksManager.hpp
src/python/: data.py  game.py
src/training/: training.cpp  training.hpp
src/utils/: utils.cpp  utils.hpp
